# icss-feature-selection

./: README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
icss_feature_selection/: __init__.py  selector.py
tests/: test.py
